one test class deleted (DocumentController), errors fixed, stable. no database interacted.